--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,13 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   shared_preferences: ^2.2.3
-  flutter_sticky_widgets: ^0.0.3
   google_fonts: ^5.1.0
   carousel_slider: ^4.2.1
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
+  intl:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -60,6 +61,7 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
+  generate: true
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
