--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   shared_preferences: ^2.2.3
   google_fonts: ^5.1.0
   carousel_slider: ^4.2.1
+  firebase_core: ^2.12.0
+  firebase_storage: ^11.6.9
+  firebase_auth: ^4.17.8
+  audioplayers: ^5.2.1
   flutter:
     sdk: flutter
   flutter_localizations:
